fixed 5 task